--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.6",
     "express": "^4.21.1",
+    "express-fileupload": "^1.5.1",
     "knex": "^3.1.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.5",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
